--- a/secondpage.css
+++ b/secondpage.css
@@ -1,14 +1,27 @@
-/* Сброс основных стилей и общие стили */
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
 }
+input[type="text"] {
+    background-color: #fff;
+    color: #333;
+    border: 1px solid #ccc;
+}
 
-/* Основные стили для светлого режима */
+.dark-mode input[type="text"] {
+    background-color: #333;
+    color: #fff; 
+    border: 1px solid #555;
+}
+
+.dark-mode ::placeholder { 
+    color: #bbb; 
+    opacity: 1; 
+}
 body {
-    background-color: #f5f5f5;
+    background-color: #87CEEB;
     color: #333;
     line-height: 1.6;
     transition: background-color 0.3s ease, color 0.3s ease;
@@ -100,14 +113,13 @@ footer p {
     text-align: center;
 }
 
-/* Темный режим */
-.dark-mode body {
-    background-color: #000000; /* Чёрный фон */
+.dark-mode{
+    background-color: #06222c; 
     color: #e0e0e0;
 }
 
 .dark-mode header, .dark-mode footer {
-    background-color: #000033; /* Очень тёмно-синий для header и footer */
+    background-color: #000033; 
     color: #e0e0e0;
 }
 
@@ -116,7 +128,7 @@ footer p {
 }
 
 .dark-mode main {
-    background-color: #121212; /* Чёрный фон для основного контента */
+    background-color: #121212; 
     color: #e0e0e0;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     border-radius: 8px;
@@ -126,10 +138,9 @@ footer p {
     color: #e0e0e0;
 }
 
-/* Стили для полей формы в темном режиме */
 .dark-mode .form-control, .dark-mode .form-select, .dark-mode input[type="text"],
 .dark-mode select, .dark-mode textarea {
-    background-color: #1f1f1f; /* Темно-серый для полей ввода */
+    background-color: #1f1f1f;
     color: #e0e0e0;
     border: 1px solid #4a4a4a;
 }
@@ -138,7 +149,6 @@ footer p {
     color: #cccccc;
 }
 
-/* Кнопки в темном режиме */
 .dark-mode .btn-primary, .dark-mode button {
     background-color: #3a3a3a;
     border-color: #4b4b4b;
@@ -156,7 +166,6 @@ footer p {
     border-color: #7a7a7a;
 }
 
-/* Аккордеоны и формы в темном режиме */
 .dark-mode .accordion-button:not(.collapsed) {
     background-color: #3a3a3a;
     color: #e0e0e0;
@@ -167,12 +176,10 @@ footer p {
     color: #e0e0e0;
 }
 
-/* Дополнительные стили для заголовков и текста в темном режиме */
 .dark-mode p, .dark-mode label, .dark-mode .navbar-nav .nav-link {
     color: #e0e0e0;
 }
 
-/* Стиль для всплывающих форм в темном режиме */
 .dark-mode .popup-form {
     background-color: #2d2d2d;
     color: #e0e0e0;
