--- a/assign1.css
+++ b/assign1.css
@@ -93,6 +93,14 @@ button {
 button:hover {
     background-color: #00509E;
 }
+.navbar-nav .nav-link, #userDisplayName, #authBtn, #toggleThemeBtn {
+    display: flex;
+    align-items: center;
+}
+
+#userDisplayName {
+    font-weight: bold;
+}
 
 footer p {
     margin: 5px 0;
